GNOME Bugzilla – Bug 648929
[tsdemux] Memory leaks everywhere
Last modified: 2011-04-29 14:20:48 UTC
tsdemux is leaking input, output, stream tables, etc... Playing a 60MB file results in a 30MB leak.
Created attachment 186866 [details] [review] tsdemux: Free packet buffer even if it doesn't have a payload This can happen with AFC-only packets. Avoids leaking buffers.
Created attachment 186867 [details] [review] mpegtsbase: Don't forget to free the program streams array
Created attachment 186868 [details] [review] mpegtsbase: Unref buffers we don't use. Avoids a massive leak :)
Created attachment 186869 [details] [review] tsdemux: Don't leak bufferlist on streams without pads
commit 21add205b7921cbae5619a09178ab370f4e71675 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Fri Apr 29 12:39:38 2011 +0200 tsdemux: Don't leak bufferlist on streams without pads https://bugzilla.gnome.org/show_bug.cgi?id=648929 commit 565f06804953203101aea26fb26cd110fb9b12d3 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Fri Apr 29 12:38:31 2011 +0200 mpegtsbase: Unref buffers we don't use. Avoids a massive leak :) https://bugzilla.gnome.org/show_bug.cgi?id=648929 commit c26ca36cf08b8a6108fb855cdc79e6a025768439 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Fri Apr 29 12:08:38 2011 +0200 mpegtsbase: Don't forget to free the program streams array https://bugzilla.gnome.org/show_bug.cgi?id=648929 commit 390502a093e15a009516be41342b0cc0b6d68f53 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Fri Apr 29 12:08:04 2011 +0200 tsdemux: Free packet buffer even if it doesn't have a payload This can happen with AFC-only packets. Avoids leaking buffers. https://bugzilla.gnome.org/show_bug.cgi?id=648929