tsdemux: Free packet buffer even if it doesn't have a payload

This can happen with AFC-only packets. Avoids leaking buffers.

https://bugzilla.gnome.org/show_bug.cgi?id=648929